--- a/quiz.css
+++ b/quiz.css
@@ -23,7 +23,7 @@ body{
     height: auto;
     padding: 15px;
     color:#1FACE3;
-    box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.1);
+    box-shadow: rgba(0, 0, 0, 0.15) 0px 5px 15px 0px;
     /* text-align: center; */
     
  border-radius: 20px;
@@ -57,6 +57,8 @@ margin-bottom: 25px;
  border: none;
  border-radius: 10px;
  transition: all .2s; /* Animation */
+
+
 }
 .btn:hover{
     transform: scale(1.2);
@@ -89,6 +91,7 @@ margin-bottom: 25px;
   user-select: none;
   -webkit-user-select: none;
   touch-action: manipulation;
+
 }
 
 .button-87:hover {
@@ -101,4 +104,19 @@ margin-bottom: 25px;
 
 .button-87:active {
   transform: scale(1.95);
+}
+
+.wrong{
+    background: red;
+    color: white;
+}
+.correct{
+    background-color: green;
+    color: white;
+}
+.hide{
+    display: none;
+}
+.show{
+    display: block;
 }
